k8s/sercice.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
  namespace: my-app
spec:
  selector:
    app: react-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: django-backend-service
  namespace: my-app
spec:
  selector:
    app: django-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
